fix(layout): improve right-to-left (RTL) layout support
- Enhance RTL layout for various UI elements and dialogs
- Adjust scrollbar settings and appearance
- Improve menu and list item styling for RTL languages
- Update README with RTL layout limitations and scrollbar settings

--- a/styles/components/menu.scss
+++ b/styles/components/menu.scss
@@ -164,7 +164,7 @@
 
         @media screen and (min-width: 1292px) {
 
-            width: 75vw !important;
+            width: 75vw;
             max-width: calc(12em * 7);
             max-height: 65vh;
 
@@ -190,7 +190,7 @@
             }
 
             &>.emojis {
-                min-width: 50vw;
+                min-width: 100%;
             }
 
             // https://github.com/mustakshif/Asri/issues/30
