--- a/styles/features/colorful-asri.scss
+++ b/styles/features/colorful-asri.scss
@@ -259,7 +259,7 @@
         }
 
         svg:first-child {
-            margin-right: 4px;
+            margin-inline-end: 4px;
             transform: scale(1.1);
         }
     }
